flask template changes added

--- a/django/mysite/meetups_app/templates/meetups_app/includes/meetup_item.html
+++ b/django/mysite/meetups_app/templates/meetups_app/includes/meetup_item.html
@@ -7,6 +7,7 @@
             <div class="meetup-details">
                 <h3>{{item.title}}</h3>
                 <address>{{item.address}}</address>
+                <p>{{item.description}}</p>
             </div>
         </div>  
         <div class="meetup-actions">
